--- a/index.html
+++ b/index.html
@@ -213,29 +213,29 @@
     </p>
   </section>
 
-  <!-- MEN -->
-  <section>
-    <h2>MEN</h2>
-    <div class="collections">
-      <div class="card"><h3>T-SHIRTS</h3><span>ESSENTIALS</span></div>
-      <div class="card"><h3>HOODIES</h3><span>STRUCTURED</span></div>
-      <div class="card"><h3>JACKETS</h3><span>STATEMENT</span></div>
-      <div class="card"><h3>SHIRTS</h3><span>REFINED</span></div>
-    </div>
-    <a class="btn" href="https://YOUR-SHOPIFY-LINK/collections/men">SHOP MEN</a>
-  </section>
+<!-- MEN -->
+<section>
+  <h2>MEN</h2>
+  <p>
+    Contemporary silhouettes designed with restraint,
+    precision, and confidence.
+  </p>
+  <a class="btn" href="https://YOUR-SHOPIFY-LINK/collections/men">
+    VIEW COLLECTION
+  </a>
+</section>
 
-  <!-- WOMEN -->
-  <section>
-    <h2>WOMEN</h2>
-    <div class="collections">
-      <div class="card"><h3>T-SHIRTS</h3><span>MODERN</span></div>
-      <div class="card"><h3>HOODIES</h3><span>MINIMAL</span></div>
-      <div class="card"><h3>JACKETS</h3><span>ELEVATED</span></div>
-      <div class="card"><h3>SHIRTS</h3><span>TIMELESS</span></div>
-    </div>
-    <a class="btn" href="https://YOUR-SHOPIFY-LINK/collections/women">SHOP WOMEN</a>
-  </section>
+<!-- WOMEN -->
+<section>
+  <h2>WOMEN</h2>
+  <p>
+    Elevated essentials crafted for timeless presence
+    and modern expression.
+  </p>
+  <a class="btn" href="https://YOUR-SHOPIFY-LINK/collections/women">
+    VIEW COLLECTION
+  </a>
+</section>
 
   <!-- FOOTER -->
   <footer>
