--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ELOIR® — Modern Luxury Redefined</title>
+  <title>ELOIR — Born for the Few</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- GOOGLE FONT -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
     * {
@@ -22,161 +22,100 @@
       overflow-x: hidden;
     }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    /* HERO */
+    /* ---------- HERO ---------- */
     .hero {
       height: 100vh;
-      background:
-        linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
-        url('hero.jpg') center/cover no-repeat;
+      background: linear-gradient(
+          rgba(0,0,0,0.55),
+          rgba(0,0,0,0.85)
+        ),
+        url('hero.jpg.png') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
     }
 
-    .hero-inner {
-      animation: fadeUp 1.8s ease forwards;
-    }
-
-    .logo {
-      font-size: 64px;
-      letter-spacing: 10px;
+    .hero-content h1 {
+      font-size: clamp(3rem, 6vw, 6rem);
+      letter-spacing: 0.25em;
       font-weight: 400;
     }
 
-    .tagline {
+    .hero-content p {
       margin-top: 18px;
-      font-size: 13px;
-      letter-spacing: 3px;
-      opacity: 0.75;
+      letter-spacing: 0.35em;
+      font-size: 0.8rem;
+      opacity: 0.8;
     }
 
     .divider {
       width: 60px;
       height: 1px;
       background: #fff;
-      margin: 35px auto;
-      opacity: 0.4;
-    }
-
-    .hero-nav {
-      display: flex;
-      gap: 50px;
-      justify-content: center;
-      font-size: 13px;
-      letter-spacing: 3px;
-    }
-
-    .hero-nav a {
-      opacity: 0.85;
-      transition: opacity 0.3s ease;
-    }
-
-    .hero-nav a:hover {
-      opacity: 1;
-    }
-
-    /* SECTION BASE */
-    section {
-      padding: 120px 20px;
-      text-align: center;
-    }
-
-    h2 {
-      font-size: 28px;
-      letter-spacing: 4px;
-      margin-bottom: 30px;
-    }
-
-    p {
-      max-width: 900px;
-      margin: auto;
-      font-size: 15px;
-      line-height: 1.9;
-      opacity: 0.75;
-    }
-
-    /* COLLECTIONS */
-    .collections {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 40px;
-      max-width: 1100px;
-      margin: 80px auto 0;
-    }
-
-    .card {
-      border: 1px solid rgba(255,255,255,0.15);
-      padding: 60px 20px;
-      transition: all 0.4s ease;
-    }
-
-    .card:hover {
-      background: #fff;
-      color: #000;
-    }
-
-    .card h3 {
-      font-size: 18px;
-      letter-spacing: 3px;
-      margin-bottom: 10px;
-    }
-
-    .card span {
-      font-size: 12px;
-      letter-spacing: 2px;
-      opacity: 0.7;
-    }
-
-    /* BUTTON */
-    .btn {
-      display: inline-block;
-      margin-top: 50px;
-      padding: 14px 40px;
-      border: 1px solid #fff;
-      font-size: 12px;
-      letter-spacing: 3px;
-      transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-      background: #fff;
-      color: #000;
-    }
-
-    /* FOOTER */
-    footer {
-      padding: 80px 20px;
-      border-top: 1px solid rgba(255,255,255,0.15);
-      text-align: center;
-      font-size: 12px;
-      letter-spacing: 2px;
+      margin: 30px auto;
       opacity: 0.6;
     }
 
-    /* ANIMATION */
-    @keyframes fadeUp {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    .nav-links {
+      display: flex;
+      gap: 60px;
+      justify-content: center;
+      margin-top: 30px;
     }
 
-    /* MOBILE */
-    @media (max-width: 768px) {
-      .logo {
-        font-size: 42px;
-        letter-spacing: 6px;
-      }
+    .nav-links a {
+      text-decoration: none;
+      color: #fff;
+      letter-spacing: 0.3em;
+      font-size: 0.8rem;
+      transition: opacity 0.3s;
+    }
+
+    .nav-links a:hover {
+      opacity: 0.6;
+    }
+
+    /* ---------- BRAND STORY ---------- */
+    .story {
+      padding: 140px 10%;
+      text-align: center;
+      background: #000;
+    }
+
+    .story h2 {
+      letter-spacing: 0.4em;
+      font-size: 1rem;
+      margin-bottom: 30px;
+    }
+
+    .story p {
+      max-width: 750px;
+      margin: auto;
+      font-size: 1rem;
+      line-height: 1.9;
+      opacity: 0.85;
+    }
+
+    /* ---------- FOOTER ---------- */
+    footer {
+      padding: 60px 0;
+      text-align: center;
+      font-size: 0.75rem;
+      letter-spacing: 0.3em;
+      opacity: 0.5;
+    }
+
+    /* ---------- SCROLL ANIMATION ---------- */
+    .reveal {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: all 1.2s ease;
+    }
+
+    .reveal.active {
+      opacity: 1;
+      transform: translateY(0);
     }
   </style>
 </head>
@@ -184,63 +123,59 @@
 <body>
 
   <!-- HERO -->
-  <div class="hero">
-    <div class="hero-inner">
-      <!-- Replace with logo image later if needed -->
-      <div class="logo">ELOIR</div>
-      <div class="tagline">MODERN LUXURY REDEFINED</div>
-
+  <section class="hero reveal">
+    <div class="hero-content">
+      <h1>ELOIR</h1>
+      <p>BORN FOR THE FEW</p>
       <div class="divider"></div>
 
-      <!-- Shopify links -->
-      <div class="hero-nav">
-        <a href="https://YOUR-SHOPIFY-LINK/collections/men">MEN</a>
-        <a href="https://YOUR-SHOPIFY-LINK/collections/women">WOMEN</a>
+      <div class="nav-links">
+        <!-- These will later link to Shopify collections -->
+        <a href="#">MEN</a>
+        <a href="#">WOMEN</a>
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- BRAND STORY -->
-  <section>
-    <h2>OUR PHILOSOPHY</h2>
+  <section class="story reveal">
+    <h2>OUR STORY</h2>
     <p>
-      ELOIR is built on restraint, precision, and identity.
-      Created for those who value presence over noise,
-      quality over quantity, and timeless design over trends.
-      <br><br>
-      Every garment is intentional.
-      Every detail speaks quietly — but with authority.
+      ELOIR is not made for everyone.  
+      It is created for those who understand restraint, precision,
+      and silent power.  
+      Every piece reflects confidence without noise — luxury without excess.
+       
+      We don’t follow trends.  
+      We define presence.
     </p>
   </section>
 
-<!-- MEN -->
-<section>
-  <h2>MEN</h2>
-  <p>
-    Contemporary silhouettes designed with restraint,
-    precision, and confidence.
-  </p>
-  <a class="btn" href="https://YOUR-SHOPIFY-LINK/collections/men">
-    VIEW COLLECTION
-  </a>
-</section>
-
-<!-- WOMEN -->
-<section>
-  <h2>WOMEN</h2>
-  <p>
-    Elevated essentials crafted for timeless presence
-    and modern expression.
-  </p>
-  <a class="btn" href="https://YOUR-SHOPIFY-LINK/collections/women">
-    VIEW COLLECTION
-  </a>
-</section>
-
   <!-- FOOTER -->
   <footer>
-    © 2025 ELOIR®. All rights reserved.
+    © ELOIR — ALL RIGHTS RESERVED
   </footer>
+
+  <!-- SCROLL SCRIPT -->
+  <script>
+    function revealOnScroll() {
+      const reveals = document.querySelectorAll('.reveal');
+      reveals.forEach(el => {
+        const windowHeight = window.innerHeight;
+        const elementTop = el.getBoundingClientRect().top;
+        const elementVisible = 120;
+
+        if (elementTop < windowHeight - elementVisible) {
+          el.classList.add('active');
+        } else {
+          el.classList.remove('active');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', revealOnScroll);
+    revealOnScroll();
+  </script>
 
 </body>
 </html>
